--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -49,6 +49,7 @@ splitter.sidebar-splitter {
 :root {
     --toolbar-bgcolor: transparent !important;
     --lwt-accent-color: transparent !important;
+    --lwt-accent-color-inactive: transparent !important;
     --toolbar-field-background-color: transparent !important;
 }
 
